--- a/style/style.css
+++ b/style/style.css
@@ -5,6 +5,10 @@
           box-sizing: border-box;
 }
 
+body {
+  font-family: 'Arial', 'sans-serif';
+}
+
 li {
   list-style-type: none;
 }
@@ -18,6 +22,43 @@ a {
   padding: 0 50px;
   margin: 0 auto;
   max-width: 1250px;
+}
+
+.order-state {
+  overflow: scroll;
+  padding-top: 20px;
+}
+
+.order-state::-webkit-scrollbar {
+  width: 0;
+}
+
+.order-state-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  width: 100%;
+  min-width: 610px;
+}
+
+.order-state .order-state-item {
+  vertical-align: baseline;
+}
+
+.order-state .order-previus {
+  font-weight: bold;
+}
+
+.order-state .order-current {
+  font-size: 1.4em;
+  font-weight: bold;
+}
+
+.order-state .order-next {
+  color: lightgray;
 }
 
 .main {
@@ -63,9 +104,82 @@ a {
       -ms-flex-pack: justify;
           justify-content: space-between;
   width: 100%;
-  padding: 20px 40px;
   margin-bottom: 2%;
   border: 2px solid lightgray;
+}
+
+.main .section_ticket .map-marker {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100px;
+  padding: 20px 20px 0 30px;
+  cursor: pointer;
+}
+
+.main .section_ticket .map-marker object {
+  width: 50px;
+}
+
+.main .section_ticket-download {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 20px;
+  cursor: pointer;
+}
+
+.main .section_ticket-download .download-img {
+  position: relative;
+  width: 40px;
+  height: 40px;
+  margin: auto 0;
+  border: 3px solid blue;
+  cursor: pointer;
+}
+
+.main .section_ticket-download .download-img span {
+  position: absolute;
+  width: 15px;
+  border: 1px solid blue;
+  top: 45%;
+  right: 30%;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+}
+
+.main .section_ticket-download .download-img span p {
+  display: none;
+}
+
+.main .section_ticket-download .download-img span::after {
+  content: " ";
+  position: absolute;
+  width: 9px;
+  border: 1px solid blue;
+  top: -5px;
+  right: -2px;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.main .section_ticket-download .download-img span::before {
+  content: " ";
+  position: absolute;
+  width: 9px;
+  border: 1px solid blue;
+  top: 3px;
+  left: 4px;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
 }
 
 .main .section_ticket-info {
@@ -75,7 +189,11 @@ a {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 100%;
+  padding: 30px 0;
 }
 
 .main .section_ticket-destination {
@@ -86,22 +204,72 @@ a {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin-right: 10%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.main .section_ticket-destination_place {
+  padding-bottom: 20px;
 }
 
 .main .section_ticket-destination_details {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.main .section_ticket-destination_details p {
+  margin-right: 20px;
+  color: lightgray;
+}
+
+.main .section_ticket-destination_details a {
+  color: blue;
+}
+
+.main .section_ticket-price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 33.3%;
+  margin-right: 20%;
+}
+
+.main .section_ticket-price_time {
+  font-size: 0.8em;
+  color: lightgray;
+  padding-bottom: 10px;
 }
 
 .main .section_ticket-price_options {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
-.map-marker, .section_ticket-download {
-  width: 50px;
+.main .section_ticket-price_options .price_option-item {
+  width: 33.3%;
+  min-width: 90px;
+  margin-right: 20px;
+}
+
+.main .section_ticket-price_options .price_option-item_term {
+  padding-bottom: 10px;
+}
+
+.main .section_ticket-price_options .price_option-item_cost {
+  font-weight: bold;
+  padding-left: 17px;
 }
 /*# sourceMappingURL=style.css.map */
