--- a/style/media.scss
+++ b/style/media.scss
@@ -49,6 +49,7 @@
         }
         &-price {
             flex-direction: column;
+            margin-right: 0;
             &_time {
                 width: 100%;
             }
@@ -76,7 +77,7 @@
             padding-top: 15px;
             & .download-img {
                 border: none;
-                width: 100px;
+                width: auto;
                 height: auto;
                 margin: 0 auto;
                 & span, span::after, span::before {
