--- a/style/style.css
+++ b/style/style.css
@@ -25,6 +25,7 @@ a {
 }
 
 .order-state {
+  font-size: 0.8em;
   overflow: scroll;
   padding-top: 20px;
 }
@@ -45,7 +46,8 @@ a {
 }
 
 .order-state .order-state-item {
-  vertical-align: baseline;
+  position: relative;
+  width: auto;
 }
 
 .order-state .order-previus {
@@ -55,10 +57,52 @@ a {
 .order-state .order-current {
   font-size: 1.4em;
   font-weight: bold;
+  height: 18px;
+  vertical-align: baseline;
 }
 
 .order-state .order-next {
   color: lightgray;
+}
+
+.order-state .order-state-item span {
+  position: absolute;
+  display: inline-block;
+  padding-left: 10px;
+  width: 10px;
+  top: 50%;
+  right: -20px;
+  border-bottom: 2px solid black;
+}
+
+.order-state .order-state-item span::before {
+  content: ' ';
+  display: block;
+  position: absolute;
+  width: 8px;
+  top: -2px;
+  left: 4px;
+  -webkit-transform: rotate(-135deg);
+          transform: rotate(-135deg);
+  border-bottom: 2px solid black;
+}
+
+.order-state .order-state-item span::after {
+  content: ' ';
+  display: block;
+  position: absolute;
+  width: 8px;
+  top: 2px;
+  left: 4px;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  border-bottom: 2px solid black;
+}
+
+.order-state-list .order-next span, .order-state .order-current span,
+.order-state .order-next span::after, .order-state .order-current span::after,
+.order-state .order-next span::before, .order-state .order-current span::before {
+  border-color: lightgray;
 }
 
 .main {
@@ -89,7 +133,6 @@ a {
       -ms-flex-pack: start;
           justify-content: flex-start;
   width: 100%;
-  margin-bottom: 5%;
 }
 
 .main .order-state-item {
@@ -207,6 +250,7 @@ a {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  width: 30%;
 }
 
 .main .section_ticket-destination_place {
