--- a/style/style.scss
+++ b/style/style.scss
@@ -5,7 +5,8 @@
 }
 
 body {
-    font-family: 'Arial', 'sans-serif';    
+    font-family: 'Lato', sans-serif;
+    // font-family: 'Mulish', sans-serif;    
 }
 li {
     list-style-type: none;
@@ -17,14 +18,15 @@ a {
 }
 
 .wrapper {
-    padding: 0 50px;
+    padding: 20px;
     margin: 0 auto;
-    max-width: 1250px;
+    max-width: 1338px;
 }
 
 .order-state {
     font-size: 0.8em;
     overflow: scroll;
+    padding: 25px 0;
     &::-webkit-scrollbar {
         width: 0;
     }
@@ -38,36 +40,50 @@ a {
         position: relative;
         width: auto;
     }
-    padding-top: 20px;
     & .order-previus {
+        font-size: 20px;
         font-weight: bold;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: 1.5;
+        letter-spacing: normal;
+        color: #262e4f;
     }
     & .order-current {
-        font-size: 1.4em;
+        font-size: 30px;
         font-weight: bold;
-        height: 18px;
-        vertical-align: baseline;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: 1.33;
+        letter-spacing: normal;
+        color: var(--dark-grey-blue);
     }
     & .order-next {
-        color: lightgray;
+        font-size: 20px;
+        font-weight: bold;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: 1.5;
+        letter-spacing: normal;
+        color: #d4d5dc;
         
     }
     & .order-state-item span {
         position: absolute;
         display: inline-block;
         padding-left: 10px;
-        width: 10px;
+        width: 16px;
         top: 50%;
-        right: -20px;
+        right: -35px;
         border-bottom: 2px solid black;
     }
     & .order-state-item span::before {
         content: ' ';
         display: block;
         position: absolute;
-        width: 8px;
-        top: -2px;
-        left: 4px;
+        width: 12px;
+        top: -4px;
+        left: 6px;
         transform: rotate(-135deg);
         border-bottom: 2px solid black;
     }
@@ -75,9 +91,9 @@ a {
         content: ' ';
         display: block;
         position: absolute;
-        width: 8px;
-        top: 2px;
-        left: 4px;
+        width: 12px;
+        top: 4px;
+        left: 6px;
         transform: rotate(-45deg);
         border-bottom: 2px solid black;
     }
@@ -110,7 +126,7 @@ a {
         justify-content: space-between;
         width: 100%;
         margin-bottom: 2%;
-        border: 2px solid lightgray;
+        border: 2px solid #e4e8f0;
         & .map-marker {
             display: flex;
             flex-direction: column;
@@ -131,12 +147,12 @@ a {
                 width: 40px;
                 height: 40px;
                 margin: auto 0;
-                border: 3px solid blue;
+                border: 2px solid #2c49c5;
                 cursor: pointer;
                 & span {
                     position: absolute;
                     width: 15px;
-                    border: 1px solid blue;
+                    border: 1px solid #2c49c5;
                     top: 45%;
                     right: 30%;
                     transform: rotate(90deg);
@@ -148,7 +164,7 @@ a {
                     content: " ";
                     position: absolute;
                     width: 9px;
-                    border: 1px solid blue;
+                    border: 1px solid #2c49c5;
                     top: -5px;
                     right: -2px;
                     transform: rotate(45deg);
@@ -157,7 +173,7 @@ a {
                     content: " ";
                     position: absolute;
                     width: 9px;
-                    border: 1px solid blue;
+                    border: 1px solid #2c49c5;
                     top: 3px;
                     left: 4px;
                     transform: rotate(-45deg);
@@ -176,19 +192,39 @@ a {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            width: 30%;
+            width: 28.7%;
             &_place {
-                padding-bottom: 20px;
+                font-size: 20px;
+                font-weight: 900;
+                font-stretch: normal;
+                font-style: normal;
+                line-height: 1.3;
+                letter-spacing: normal;
+                color: #262e4f;
+                padding-bottom: 10px;
             }         
             &_details {
                 display: flex;
                 justify-content: flex-start;
                 & p {
-                    margin-right: 20px;
-                    color: lightgray;
+                    font-size: 14px;
+                    font-weight: 500;
+                    font-stretch: normal;
+                    font-style: normal;
+                    line-height: 1.43;
+                    letter-spacing: normal;
+                    color: #9296a6;
+                    padding-right: 20px;
                 }
                 & a {
-                    color: blue;
+                    font-size: 14px;
+                    font-weight: normal;
+                    font-stretch: normal;
+                    font-style: normal;
+                    line-height: 1.43;
+                    letter-spacing: normal;
+                    text-align: right;
+                    color: #2c49c5;
                 }
             }
         }
@@ -198,8 +234,13 @@ a {
         width: 33.3%;
         margin-right: 20%;
         &_time {
-            font-size: 0.8em;
-            color: lightgray;
+            font-size: 11px;
+            font-weight: 500;
+            font-stretch: normal;
+            font-style: normal;
+            line-height: 1.45;
+            letter-spacing: 0.5px;
+            color: #7d8295;
             padding-bottom: 10px;
         }
         &_options {
@@ -210,12 +251,29 @@ a {
                 min-width: 90px;
                 margin-right: 20px;
                 &_term {
-                    
+                    font-size: 16px;
+                    font-weight: normal;
+                    font-stretch: normal;
+                    font-style: normal;
+                    line-height: 1.25;
+                    letter-spacing: normal;
+                    color: #262e4f;
                     padding-bottom: 10px;
+                    & label {
+                        padding-left: 5px;
+                    }
                 }
                 &_cost {
-                    font-weight: bold;
-                    padding-left: 17px;
+                    display: inline-block;
+                    padding-left: 26px;
+                    font-size: 14px;
+                    font-weight: 900;
+                    font-stretch: normal;
+                    font-style: normal;
+                    line-height: 1.43;
+                    letter-spacing: normal;
+                    text-align: right;
+                    color: #262e4f;
                 }
             }            
         }
