--- a/style/style.css
+++ b/style/style.css
@@ -208,6 +208,7 @@ a {
   position: absolute;
   width: 15px;
   border: 1px solid #2c49c5;
+  background-color: #2c49c5;
   top: 45%;
   right: 30%;
   -webkit-transform: rotate(90deg);
@@ -223,6 +224,7 @@ a {
   position: absolute;
   width: 9px;
   border: 1px solid #2c49c5;
+  background-color: #2c49c5;
   top: -5px;
   right: -2px;
   -webkit-transform: rotate(45deg);
@@ -234,6 +236,7 @@ a {
   position: absolute;
   width: 9px;
   border: 1px solid #2c49c5;
+  background-color: #2c49c5;
   top: 3px;
   left: 4px;
   -webkit-transform: rotate(-45deg);
