--- a/style/style.scss
+++ b/style/style.scss
@@ -153,6 +153,7 @@ a {
                     position: absolute;
                     width: 15px;
                     border: 1px solid #2c49c5;
+                    background-color: #2c49c5;
                     top: 45%;
                     right: 30%;
                     transform: rotate(90deg);
@@ -165,6 +166,7 @@ a {
                     position: absolute;
                     width: 9px;
                     border: 1px solid #2c49c5;
+                    background-color: #2c49c5;
                     top: -5px;
                     right: -2px;
                     transform: rotate(45deg);
@@ -174,6 +176,7 @@ a {
                     position: absolute;
                     width: 9px;
                     border: 1px solid #2c49c5;
+                    background-color: #2c49c5;
                     top: 3px;
                     left: 4px;
                     transform: rotate(-45deg);
